--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Importação das fontes */
+
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 * {
@@ -8,7 +8,7 @@
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #f9f9f9; /* Cor de fundo da página */
+    background-color: #f9f9f9;
 }
 
 .navbar {
@@ -68,7 +68,7 @@ body {
 
 section {
     padding: 40px 20px;
-    background-color: #f8f9fa; /* Alterar para a cor desejada */
+    background-color: #f8f9fa; 
     text-align: center;
 }
 
@@ -81,8 +81,8 @@ h2 {
 .servicos-container {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap; /* Permite que os cards se movam para a linha seguinte */
-    gap: 20px; /* Espaçamento entre os cards */
+    flex-wrap: wrap; 
+    gap: 20px; 
 }
 
 
@@ -96,45 +96,43 @@ h2 {
     background-color: #fc00b0a4;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.945);
-    overflow: hidden; /* Impede que o conteúdo saia do card */
-    width: 300px; /* Defina a largura do card */
-    transition: transform 0.3s, box-shadow 0.3s; /* Transição suave para animação */
+    overflow: hidden; 
+    width: 300px;
+    transition: transform 0.3s, box-shadow 0.3s; 
 }
 
 .card:hover {
-    transform: translateY(-10px); /* Eleva o card ao passar o mouse */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra mais pronunciada */
+    transform: translateY(-10px); 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
 }
 
 .card img {
     max-width: 100%;
-    height: auto; /* Mantém a proporção da imagem */
+    height: auto; 
 }
-
 .card-text {
     padding: 20px;
 }
 
 .card-text h3 {
     margin-bottom: 10px;
-    color: #333; /* Cor do texto do título */
+    color: #333; 
 }
-
 .card-text p {
-    color: #666; /* Cor do texto do parágrafo */
+    color: #666; 
 }
 
 .depoimentos {
     padding: 40px 20px;
-    background-color: #f8f9fa; /* Alterar para a cor desejada */
+    background-color: #f8f9fa; 
     text-align: center;
 }
 
 .depoimentos-container {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap; /* Permite que os cards se movam para a linha seguinte */
-    gap: 20px; /* Espaçamento entre os cards */
+    flex-wrap: wrap; 
+    gap: 20px; 
 }
 
 .depoimento-card {
@@ -143,13 +141,13 @@ h2 {
     color: #000000;
     box-shadow: 0 4px 8px rgb(0, 0, 0);
     padding: 20px;
-    width: 300px; /* Defina a largura do card */
-    transition: transform 0.3s, box-shadow 0.3s; /* Transição suave para animação */
+    width: 300px; 
+    transition: transform 0.3s, box-shadow 0.3s; 
 }
 
 .depoimento-card:hover {
-    transform: translateY(-10px); /* Eleva o card ao passar o mouse */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Sombra mais pronunciada */
+    transform: translateY(-10px); 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
 }
 
 .depoimento-card p {
@@ -158,7 +156,7 @@ h2 {
 
 .depoimento-card h4 {
     margin-top: 10px;
-    color: #333; /* Cor do texto do autor */
+    color: #333; 
 }
 
 .equipe {
@@ -223,98 +221,96 @@ footer {
 }
 
 #contato {
-    background-color: #f9f9f9; /* Fundo claro para destaque */
-    padding: 40px; /* Espaçamento interno */
-    border-radius: 10px; /* Cantos arredondados */
-    box-shadow: 0 5px 10px black; /* Sombra suave */
-    max-width: 800px; /* Largura máxima */
-    margin: 20px auto; /* Centraliza a seção */
+    background-color: #f9f9f9;
+    padding: 40px; 
+    border-radius: 10px; 
+    box-shadow: 0 5px 10px black; 
+    max-width: 800px; 
+    margin: 20px auto; 
 }
 
 #contato h2 {
-    font-size: 2rem; /* Tamanho do título */
-    margin-bottom: 20px; /* Espaço abaixo do título */
-    text-align: center; /* Centraliza o título */
+    font-size: 2rem; 
+    margin-bottom: 20px; 
+    text-align: center; 
 }
 
 #contato p {
-    font-size: 1rem; /* Tamanho do texto */
-    margin-bottom: 20px; /* Espaço abaixo do texto */
-    text-align: center; /* Centraliza a mensagem */
+    font-size: 1rem; 
+    margin-bottom: 20px; 
+    text-align: center; 
 }
-
 #contact-form {
-    display: flex; /* Exibe elementos em linha */
-    flex-direction: column; /* Alinha elementos verticalmente */
+    display: flex; 
+    flex-direction: column; 
 }
 
 #contact-form input,
 #contact-form textarea {
-    padding: 10px; /* Espaçamento interno */
-    margin-bottom: 15px; /* Espaço entre os campos */
-    border: 1px solid #646464; /* Borda sutil */
-    border-radius: 5px; /* Cantos arredondados */
-    font-size: 1rem; /* Tamanho do texto */
+    padding: 10px; 
+    margin-bottom: 15px; 
+    border: 1px solid #646464; 
+    border-radius: 5px; 
+    font-size: 1rem; 
 }
 
 #contact-form button {
-    padding: 10px; /* Espaçamento interno do botão */
-    background-color: #007BFF; /* Cor de fundo do botão */
-    color: white; /* Cor do texto do botão */
-    border: none; /* Remove borda padrão */
-    border-radius: 5px; /* Cantos arredondados */
-    cursor: pointer; /* Indica que é clicável */
-    font-size: 1rem; /* Tamanho do texto */
-    transition: background-color 0.3s; /* Efeito de transição suave */
+    padding: 10px; 
+    background-color: #007BFF; 
+    color: white; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer;
+    font-size: 1rem; 
+    transition: background-color 0.3s; 
 }
 
 #contact-form button:hover {
-    background-color: #0056b3; /* Cor do botão ao passar o mouse */
+    background-color: #0056b3; 
 }
 
 .horarios {
-    margin-top: 30px; /* Espaço acima da seção de horários */
-    text-align: center; /* Centraliza o texto */
+    margin-top: 30px; 
+    text-align: center; 
 }
 
 .horarios h3 {
-    font-size: 1.5rem; /* Tamanho do título */
-    margin-bottom: 10px; /* Espaço abaixo do título */
+    font-size: 1.5rem; 
+    margin-bottom: 10px; 
 }
 
 .horarios p {
-    font-size: 1rem; /* Tamanho do texto */
+    font-size: 1rem; 
 }
 
 
-/* Estilos do modal */
+
 .modal {
-    display: none; /* Oculto por padrão */
-    position: fixed; /* Fica em posição fixa */
-    z-index: 1000; /* Fica acima de outros elementos */
+    display: none;
+    position: fixed;
+    z-index: 1000; 
     left: 0;
     top: 0;
-    width: 100%; /* Largura total da tela */
-    height: 100%; /* Altura total da tela */
-    overflow: auto; /* Permite rolagem, se necessário */
-    background-color: rgb(0,0,0); /* Cor de fundo preta */
-    background-color: rgba(0,0,0,0.4); /* Fundo com opacidade */
-    padding-top: 60px; /* Espaçamento do topo */
+    width: 100%; 
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 60px;
 }
 
 .modal-content {
     background-color: #fefefe;
-    margin: 5% auto; /* 15% do topo e centraliza */
+    margin: 5% auto; 
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Largura do modal */
+    width: 80%;
     text-align: center;
-    border-radius: 10px; /* Bordas arredondadas */
+    border-radius: 10px; 
 }
-
 .close {
     color: #aaa;
-    float: right; /* Alinha à direita */
+    float: right; 
     font-size: 28px;
     font-weight: bold;
 }
@@ -326,7 +322,7 @@ footer {
     cursor: pointer;
 }
 
-/* Responsividade */
+
 @media (max-width: 768px) {
     .header {
         flex-direction: column;
@@ -338,6 +334,6 @@ footer {
     .servicos .card,
     .equipe .membro,
     .portfolio .projeto {
-        width: 80%; /* Para telas menores */
+        width: 80%; 
     }
 }
